--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "mint" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "내맘대로 블로그"
+title                    : "내 맘대로 블로그"
 title_separator          : "|"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "KIMSS"
@@ -96,8 +96,8 @@ author:
   name             : "KIMSS"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "안드로이드 개발자"
-  location         : "Somewhere"
-  email            :
+  location         : 
+  email            : "kssappmail@naver.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
@@ -274,7 +274,7 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: false
+      author_profile: true
       read_time: true
       comments: false # true. 사용하려면 댓글 provider 설정 해야 함
       share: true
